maak kans formulier

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALLWUxYAWdEzUoSuWD8j2gVGRR05SWpe8&v=3.exp&libraries=geometry,drawing,places"></script>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
