added coach contact details  to page

--- a/index.html
+++ b/index.html
@@ -237,6 +237,16 @@
               </div>
             </li>
           </ul>
+        <h3 class="h5">Coach</h3>
+          <ul class="team">
+            <li>
+              <h4 class="h6">
+                <a href="https://twitter/jeborsel" target="_blank">Bert Jehoul</a>
+              </h4>
+              <p>Open Knowledge Belgium - Open Badges working group</p>
+            </li>
+            <li>
+          </ul>
         </div>
       </div>
     </div>
