added project lead

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-5 col-md-6 col-lg-5">
-          <h3 class="h5">The team</h3>
+          <h3 class="h5">oSoc18 Team</h3>
           <ul class="team">
             <li>
               <h4 class="h6">
@@ -210,7 +210,25 @@
           </ul>
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-offset-1 col-md-5 col-lg-5 col-lg-offset-2">
-          <h3 class="h5">Our partners</h3>
+          <h3 class="h5">oSoc18 Coach</h3>
+          <ul class="team">
+            <li>
+              <h4 class="h6">
+                <a href="https://twitter/jeborsel" target="_blank">Bert Jehoul</a>
+              </h4>
+              <p>Open Knowledge Belgium - Open Badges working group</p>
+            </li>
+          </ul>
+          <h3 class="h5">Project Lead</h3>
+          <ul class="team">
+              <li>
+              <h4 class="h6">
+                <a href="https://twitter.com/drievana" target="_blank">Dries Van Acker</a>
+              </h4>
+              <p>Arteveldehogeschool</p>
+            </li>
+          </ul>
+          <h3 class="h5">Partners</h3>
           <ul class="partners">
             <li class="row middle-xs">
               <div class="col-xs-3">
@@ -236,16 +254,6 @@
                 </h4>
               </div>
             </li>
-          </ul>
-        <h3 class="h5">Coach</h3>
-          <ul class="team">
-            <li>
-              <h4 class="h6">
-                <a href="https://twitter/jeborsel" target="_blank">Bert Jehoul</a>
-              </h4>
-              <p>Open Knowledge Belgium - Open Badges working group</p>
-            </li>
-            <li>
           </ul>
         </div>
       </div>
