corrected project lead name

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <ul class="team">
               <li>
               <h4 class="h6">
-                <a href="https://twitter.com/drievana" target="_blank">Dries Van Acker</a>
+                <a href="https://twitter.com/drievana" target="_blank">Dries Vanacker</a>
               </h4>
               <p>Arteveldehogeschool</p>
             </li>
